<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.noahblumenfeld.protoype_coursework.MenuActivity">

   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:stretchColumns="0,1">

       <TableRow
           android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/search_button"
                android:text="@string/search_button" />
       </TableRow>

       <TableRow
           android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/post_button"
                android:text="@string/post_button"/>
       </TableRow>

       <TableRow
           android:layout_weight="1">
           <Button
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/delete_post_button"
               android:text="@string/delete_post_button"/>
       </TableRow>




   </TableLayout>
</RelativeLayout>